--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -569,6 +569,12 @@ nav ul li a:hover:after {
     transform: scale(1.15);
 }
 
+.brand-logo.jlg-logo {
+    max-width: 100%;
+    max-height: 85%;
+    transform: scale(1.2); /* Slightly larger scale for the JLG logo */
+}
+
 /* Market Section */
 .market {
     background-color: #f8f9fd;
