--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -536,13 +536,13 @@ nav ul li a:hover:after {
 .brand-logo.grove-logo {
     max-width: 100%;
     max-height: 85%;
-    transform: scale(1.15); /* Slightly smaller than Manitowoc */
+    transform: scale(1.35); /* Slightly smaller than Manitowoc */
 }
 
 .brand-logo.national-logo {
     max-width: 100%;
     max-height: 90%;
-    transform: scale(1.1); /* Adjusted for this specific logo */
+    transform: scale(1.3) translateY(-15px); /* Adjusted for this specific logo */
     margin-top: -5px; /* Adjust vertical position */
 }
 
@@ -566,7 +566,7 @@ nav ul li a:hover:after {
 .brand-logo.konecranes-logo {
     max-width: 100%;
     max-height: 85%;
-    transform: scale(1.15);
+    transform: scale(1.3);
 }
 
 .brand-logo.jlg-logo {
@@ -579,6 +579,19 @@ nav ul li a:hover:after {
     max-width: 100%;
     max-height: 85%;
     transform: scale(1.15); /* Adjust scale as needed based on logo dimensions */
+}
+
+/* Transportation & Logistics brands */
+.brand-logo.terberg-logo {
+    max-width: 100%;
+    max-height: 85%;
+    transform: scale(1.99); /* Increased from 1.1 to 1.5 */
+}
+
+.brand-logo.bridgestone-logo {
+    max-width: 100%;
+    max-height: 85%;
+    transform: scale(1.2); /* Adjusted for Bridgestone logo dimensions */
 }
 
 /* Market Section */
