--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -594,6 +594,12 @@ nav ul li a:hover:after {
     transform: scale(1.2); /* Adjusted for Bridgestone logo dimensions */
 }
 
+.brand-logo.elgin-logo {
+    max-width: 100%;
+    max-height: 85%;
+    transform: scale(1.2); /* Adjust scale as needed based on Elgin logo dimensions */
+}
+
 /* Market Section */
 .market {
     background-color: #f8f9fd;
